VAN-5973 Fixes for moniter system status overlap

--- a/vtr-ui/src/app/components/widgets/widget-system-monitor/widget-system-monitor.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-system-monitor/widget-system-monitor.component.scss
@@ -67,12 +67,12 @@
 				.info-link {
 					color: $gaming_info_link;
 					border-bottom: 0.2rem solid $gaming_info_link;
-				&:hover{
-					color: $gaming_info_link_hover;
-					border-color:$gaming_info_link_hover;
-					text-decoration: none;
+					&:hover {
+						color: $gaming_info_link_hover;
+						border-color: $gaming_info_link_hover;
+						text-decoration: none;
+					}
 				}
-			}
 			}
 			.monitor-section {
 				border-radius: $border_radius_sm;
@@ -103,7 +103,7 @@
 					}
 					.expand-icon {
 						position: absolute;
-						bottom: .3rem;
+						bottom: 0.3rem;
 						width: 100%;
 						font-size: 2rem;
 						text-align: center;
@@ -116,20 +116,20 @@
 					&:hover .gaming-tooltip {
 						display: block;
 					}
-					.gaming-tooltip{
+					.gaming-tooltip {
 						position: absolute;
 						display: none;
 						left: 0;
 						right: 0;
 						margin: auto;
-						margin-top:-2rem;
+						margin-top: -2rem;
 					}
 				}
 				ngb-tooltip-window.tooltip {
 					border-radius: 0.4rem;
 					background-color: $light;
 					box-shadow: 0 0 1.5rem 0 rgba(0, 0, 0, 0.15);
-					color:$gaming_dark;
+					color: $gaming_dark;
 
 					.tooltip-inner {
 						padding: 1.2rem;
@@ -141,7 +141,7 @@
 					}
 				}
 
-				.gaming-tooltip{
+				.gaming-tooltip {
 					padding: 2.4rem;
 					background: $gaming_lightest;
 					color: $main_dark;
@@ -150,15 +150,15 @@
 					position: absolute;
 					display: inline-block;
 					z-index: 99;
-					top:-6rem;
+					top: -6rem;
 					min-width: 24rem;
 					left: 50%;
 					transform: translate(-50%);
 					opacity: 0;
-					transition: all .5s ease-in-out;
+					transition: all 0.5s ease-in-out;
 					word-break: break-all;
-					&::after{
-						content: '';
+					&::after {
+						content: "";
 						position: absolute;
 						width: 0;
 						height: 0;
@@ -189,7 +189,7 @@
 							min-width: 15rem;
 							left: 50%;
 							transform: translate(-50%);
-							top:-4rem;
+							top: -4rem;
 						}
 						&:hover {
 							.gaming-tooltip {
@@ -214,6 +214,9 @@
 					.monitor-stack {
 						height: 100%;
 						padding: 1rem 1.5rem;
+						@media #{$mediaquery_13} {
+							padding: 1rem 0.5rem;
+						}
 						.stack-container {
 							position: relative;
 							border-radius: $border_radius_sm;
@@ -222,7 +225,7 @@
 							padding: 0.5rem;
 							width: 4rem;
 							height: calc(100% - 6rem);
-							.stack-border{
+							.stack-border {
 								position: absolute;
 								width: calc(100% - 1rem);
 								height: calc(100% - 1rem);
@@ -230,16 +233,16 @@
 							.stack-content {
 								position: absolute;
 								//bottom: 0.5rem;
-								width:100%;
+								width: 100%;
 								height: 100%;
 								background-size: 100% 100%;
 								background-position: 50% 100%;
 								background-repeat: no-repeat;
 								&.gpu {
-									background-image:url('/assets/images/gaming/gaming-gpu-stack.svg');
+									background-image: url("/assets/images/gaming/gaming-gpu-stack.svg");
 								}
 								&.ram {
-									background-image:url('/assets/images/gaming/gaming-ram-stack.svg');
+									background-image: url("/assets/images/gaming/gaming-ram-stack.svg");
 								}
 							}
 							.stack-mask {
@@ -297,7 +300,7 @@
 					}
 					.cpu-ring {
 						// background-color: $highlight;
-						background-image:url('/assets/images/gaming/gaming-cpu-ring.svg');
+						background-image: url("/assets/images/gaming/gaming-cpu-ring.svg");
 						background-size: 100% 100%;
 						background-position: 50% 50%;
 						background-repeat: no-repeat;
@@ -530,7 +533,7 @@
 					.hd-item {
 						margin-bottom: 3.4rem;
 						position: relative;
-						&:nth-child(odd){
+						&:nth-child(odd) {
 							z-index: 9;
 						}
 						.gaming-tooltip {
